# basic-mcp

./: .gitignore  README.md  helloWorld.js  print.py  pyproject.toml  test.py  test_client.py  test_server.py
