[project]
name = "mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref>=3.8.1",
    "fastmcp>=2.7.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "mcp[cli]>=1.9.3",
    "openai>=1.86.0",
    "pgvector>=0.4.1",
    "pinecone>=7.0.2",
    "psycopg2>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
